test/Fail/RegionWrongModule.err
RegionWrongModule.agda:10.8-26: error: [ModuleNameDoesntMatchFileName]
The name 'ThisIsTheWrongName' of the top level module does not
match the file name. A such named module should be defined in one
of the following files:
  ../ThisIsTheWrongName.AGDA
  ThisIsTheWrongName.AGDA
  agda-default-include-path/ThisIsTheWrongName.AGDA
where .AGDA denotes a legal extension for an Agda file
(i.e., one of .agda .lagda .lagda.rst .lagda.tex .lagda.md
 .lagda.org .lagda.tree .lagda.typ)
